--- a/css/et-line.css
+++ b/css/et-line.css
@@ -106,8 +106,8 @@
 .et-icon-video,
 .et-icon-wallet,
 .et-icon-wine {
-    font-family: et-line;
-    speak: none;
+    font-family: "et-line", sans-serif;
+    speak: never;
     font-style: normal;
     font-weight: 400;
     font-variant: normal;
