--- a/style.css
+++ b/style.css
@@ -775,9 +775,11 @@ h4 {
 }
 
 .tc-white {
+    color: #fff!important;
+}
+.tc-black {
     color: #000!important;
 }
-
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #000000!important;
